@@ -1,5 +1,10 @@
 2005-06-15  Mark McLoughlin  <markmc@redhat.com>
 
+	* sabayon.spec.in: need to BuildRequires pygtk2-devel
+	too
+
+2005-06-15  Mark McLoughlin  <markmc@redhat.com>
+
 	* sabayon.spec.in: update
 
 2005-06-14  Mark McLoughlin  <markmc@redhat.com>
